--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/schoolLogo"
         android:layout_width="@android:dimen/notification_large_icon_width"
         android:layout_height="@android:dimen/notification_large_icon_height"
         app:layout_constraintEnd_toEndOf="parent"
@@ -15,78 +15,100 @@
         app:srcCompat="@drawable/jesuitas_logo" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/imageSchool"
         android:layout_width="0dp"
         android:layout_height="216dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/schoolLogo"
         app:srcCompat="@drawable/jesuitasrioja" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/schoolName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Centro Sagrado Corazón Jesuitas"
+        android:text="@string/schoolName"
+        android:layout_centerHorizontal="true"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@android:color/black"
+        android:textStyle="bold"
+        android:typeface="normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+        app:layout_constraintTop_toBottomOf="@+id/imageSchool" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/ilikeIt"
         android:layout_width="100sp"
         android:layout_height="100sp"
+        android:layout_marginBottom="4dp"
         android:onClick="likeItMsg"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/megusta"
-        tools:layout_editor_absoluteY="464dp" />
+        app:srcCompat="@drawable/megusta" />
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/e_mailicon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/email"
-        tools:layout_editor_absoluteX="31dp"
-        tools:layout_editor_absoluteY="421dp" />
+        app:layout_constraintEnd_toStartOf="@+id/e_mail"
+        app:layout_constraintHorizontal_bias="0.472"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/e_mail"
+        app:srcCompat="@drawable/email" />
 
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/gpsIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/location"
-        tools:layout_editor_absoluteX="31dp"
-        tools:layout_editor_absoluteY="340dp" />
+        app:layout_constraintEnd_toStartOf="@+id/street"
+        app:layout_constraintHorizontal_bias="0.467"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/street"
+        app:srcCompat="@drawable/location" />
 
     <ImageView
-        android:id="@+id/imageView6"
+        android:id="@+id/phoneIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/phone"
-        tools:layout_editor_absoluteX="31dp"
-        tools:layout_editor_absoluteY="482dp" />
+        app:layout_constraintEnd_toStartOf="@+id/phoneNumber"
+        app:layout_constraintHorizontal_bias="0.472"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/phoneNumber"
+        app:srcCompat="@drawable/phone" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/street"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
-        tools:layout_editor_absoluteX="115dp"
-        tools:layout_editor_absoluteY="343dp" />
+        app:layout_constraintBottom_toTopOf="@+id/e_mail"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.271"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/schoolName" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/e_mail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
-        tools:layout_editor_absoluteX="115dp"
-        tools:layout_editor_absoluteY="425dp" />
+        app:layout_constraintBottom_toTopOf="@+id/phoneNumber"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.271"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/schoolName"
+        app:layout_constraintVertical_bias="0.692" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/phoneNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
-        tools:layout_editor_absoluteX="118dp"
-        tools:layout_editor_absoluteY="487dp" />
+        app:layout_constraintBottom_toTopOf="@+id/ilikeIt"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.271"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/schoolName"
+        app:layout_constraintVertical_bias="1.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
