--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,10 @@
         android:id="@+id/inputName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="@dimen/marginEditText"
+        android:layout_marginTop="@dimen/marginEditText"
+        android:layout_marginEnd="@dimen/marginEditText"
+        android:layout_marginBottom="@dimen/marginEditText"
         android:ems="10"
         android:hint="@string/hint"
         android:inputType="textPersonName"
@@ -27,8 +27,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="@string/topping"
+        android:layout_marginLeft="@dimen/marginEditText"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />
 
@@ -36,8 +36,8 @@
         android:id="@+id/chocolate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginStart="@dimen/marginEditText"
+        android:layout_marginLeft="@dimen/marginEditText"
         android:layout_marginTop="4dp"
         android:text="@string/chocolate"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,8 +47,8 @@
         android:id="@+id/whippedCream"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginStart="@dimen/marginEditText"
+        android:layout_marginLeft="@dimen/marginEditText"
         android:layout_marginTop="16dp"
         android:text="@string/whipped_cream"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,8 +59,8 @@
         android:id="@+id/quantity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginLeft="@dimen/marginEditText"
+        android:layout_marginBottom="@dimen/marginEditText"
         android:text="@string/quantity"
         app:layout_constraintBottom_toTopOf="@id/lessButton"
         app:layout_constraintLeft_toLeftOf="parent" />
@@ -70,7 +70,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
-        android:layout_marginLeft="8dp"
+        android:layout_marginLeft="@dimen/marginEditText"
         android:onClick="countUp"
         android:paddingTop="4dp"
         android:text="@string/plus"
@@ -83,7 +83,6 @@
         android:layout_height="wrap_content"
         android:paddingBottom="12dp"
         android:text="@string/cantidad"
-
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -96,7 +95,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
-        android:layout_marginRight="8dp"
+        android:layout_marginRight="@dimen/marginEditText"
         android:onClick="countDown"
         android:paddingTop="4dp"
         android:text="@string/less"
@@ -107,10 +106,10 @@
         android:id="@+id/orderButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="@dimen/marginEditText"
+        android:layout_marginTop="@dimen/marginEditText"
+        android:layout_marginEnd="@dimen/marginEditText"
+        android:layout_marginBottom="@dimen/marginEditText"
         android:onClick="makeOrder"
         android:text="@string/order"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -121,8 +120,12 @@
         android:id="@+id/editTextTextEmailAddress"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:ems="10"
+        android:layout_marginStart="@dimen/marginEditText"
+        android:layout_marginTop="@dimen/marginEditText"
+        android:layout_marginEnd="@dimen/marginEditText"
+        android:layout_marginBottom="@dimen/marginEditText"
         android:inputType="textEmailAddress"
+        android:hint="@string/emailHint"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/inputName" />
