--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -10,5 +10,106 @@
         android:id="@+id/order_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:text="TextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    <!-- Nombre del usuario-->
+    <TextView
+        android:id="@+id/name_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/textView_dp"
+        android:layout_marginLeft="@dimen/textView_dp"
+        android:layout_marginTop="32dp"
+        android:text="@string/name_label_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/order_textview" />
+
+    <EditText
+        android:id="@+id/name_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/editText_dp"
+        android:layout_marginLeft="@dimen/editText_dp"
+        android:ems="10"
+        android:hint="@string/enter_name_hint"
+        android:inputType="textPersonName"
+        app:layout_constraintBaseline_toBaselineOf="@id/name_label"
+        app:layout_constraintStart_toEndOf="@id/name_label" />
+    <!-- direccion-->
+    <TextView
+        android:id="@+id/address_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/textView_dp"
+        android:layout_marginLeft="@dimen/textView_dp"
+        android:layout_marginTop="@dimen/textView_dp"
+        android:text="@string/label_address"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/name_label"
+
+        />
+
+    <EditText
+        android:id="@+id/address_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/editText_dp"
+        android:layout_marginLeft="@dimen/editText_dp"
+        android:ems="10"
+        android:hint="@string/enter_address_hint"
+        android:inputType="textMultiLine"
+        app:layout_constraintBaseline_toBaselineOf="@+id/address_label"
+        app:layout_constraintStart_toEndOf="@id/address_label"
+        />
+    <!--Phone-->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/phone_label"
+        android:layout_marginStart="@dimen/textView_dp"
+        android:layout_marginLeft="@dimen/textView_dp"
+        android:text="@string/phone_label"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/address_text"
+        />
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/phone_text"
+        android:layout_marginStart="@dimen/editText_dp"
+        android:layout_marginLeft="@dimen/editText_dp"
+        android:ems="10"
+        android:hint="@string/enter_phone_hint"
+        android:inputType="phone"
+        app:layout_constraintBaseline_toBaselineOf="@id/phone_label"
+        app:layout_constraintStart_toEndOf="@id/phone_label"
+        />
+    <!--Notas-->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/note_label"
+        android:layout_marginStart="@dimen/textView_dp"
+        android:layout_marginLeft="@dimen/textView_dp"
+        android:layout_marginTop="@dimen/textView_dp"
+        android:text="@string/note_label"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/phone_label"
+        />
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/note_text"
+        android:layout_marginStart="@dimen/editText_dp"
+        android:layout_marginLeft="@dimen/editText_dp"
+        android:ems="10"
+        android:hint="@string/enter_a_note"
+        android:inputType="textCapCharacters"
+        app:layout_constraintBaseline_toBaselineOf="@id/note_label"
+        app:layout_constraintStart_toEndOf="@id/note_label"
+
+        />
+
+    <!--RadioButtons-->
 </androidx.constraintlayout.widget.ConstraintLayout>
