--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,5 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="editText_dp">8dp</dimen>
+    <dimen name="textView_dp">24dp</dimen>
 </resources>
