--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -18,12 +18,12 @@
         android:id="@+id/name_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/textView_dp"
-        android:layout_marginLeft="@dimen/textView_dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="32dp"
         android:text="@string/name_label_text"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/order_textview" />
+        app:layout_constraintTop_toBottomOf="@+id/order_textview" />
 
     <EditText
         android:id="@+id/name_text"
@@ -41,14 +41,12 @@
         android:id="@+id/address_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/textView_dp"
-        android:layout_marginLeft="@dimen/textView_dp"
-        android:layout_marginTop="@dimen/textView_dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
         android:text="@string/label_address"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/name_label"
-
-        />
+        app:layout_constraintTop_toBottomOf="@+id/name_label"
 
     <EditText
         android:id="@+id/address_text"
@@ -64,15 +62,15 @@
         />
     <!--Phone-->
     <TextView
+        android:id="@+id/phone_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/phone_label"
-        android:layout_marginStart="@dimen/textView_dp"
-        android:layout_marginLeft="@dimen/textView_dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
         android:text="@string/phone_label"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/address_text"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/address_text" />
     <EditText
         android:id="@+id/phone_text"
         android:layout_width="134dp"
