--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -46,7 +46,7 @@
         android:layout_marginTop="24dp"
         android:text="@string/label_address"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/name_label"
+        app:layout_constraintTop_toBottomOf="@+id/name_label"/>
 
     <EditText
         android:id="@+id/address_text"
