--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,10 +1,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="android.example.droidcafe.MainActivity">
+    tools:context=".MainActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
+        android:title="@string/action_settings"
+        android:icon="@color/cardview_dark_background"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/prueba1"
+        android:orderInCategory="100"
+
+        android:title="@string/action_settings"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/prueba2"
+        android:orderInCategory="100"
+
         android:title="@string/action_settings"
         app:showAsAction="never" />
 </menu>
