--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         app:layout_constraintVertical_bias="0.086"
-        android:onClick="showDatePicker"
+        android:onClick="showTimePicker"
         />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
